kustomize/development/namespace.yaml
# openhab.git:kustomize/development/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: automation-dev
