kustomize/development/ingressroute.yaml
# openhab.git:kustomize/production/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openhab-dev
  namespace: openhab-system-dev
  annotations:
    kubernetes.io/ingress.class: traefik-dev
spec:
  routes:
    - match: "Host(`oh.crazyelectron.io`)"
      kind: Rule
